#. Add microsecond format support in utils/date.py
#. Improve DateField, TimeField, DatetimeField process with date module
#. Remove doc test from uliform.py to test_form.py
#. Add sort() to SortedDict
#. Add set_var and get_var to SimpleFrame.py as default function, and config
   them in settings.ini
#. Fix rules.py can't parse Class View function directly, such as defined in
   settings.ini
#. Add test_sorteddict.py and add sort() method to sorteddict class
#. Add common set_var and get_var and configure them in default_settings.ini
#. improve soap app, add multiple soap support, details you should see soap doc

0.1.3 Version
-----------------

#. Fix loadtable bug for PickleType type, using inspecttable instead, so
   PickleyType will be BLOB type.
#. Improve template process:

    #. Add ``#uliweb-template-tag:<begin_tag>,<end_tag><newline>`` process to template
       file, and you can also pass ``begin_tag`` and ``end_tag`` to Template, and
       ``template_file()`` or ``template()``
    #. Add ``[TEMPLATE_PROCESSOR]`` section to ``default_settings.ini``, so that user
       can setup his own template processor, the option will look like::
    
            angularjs_template = {'file_exts':['.ahtml'], 
                'processor':'uliweb.core.template.template_file', 
                'args':{}}
                
       * the key is not very important, but you should keep it unique
       * ``file_exts`` will be the file extensions, it's a list, so the 
         processor can match multiple filenames
       * ``processor`` will be the path of template function, uliweb will
         import it when needed
       * ``args`` will be a dict, and it will be passed to template function
    #. Add ``BEGIN_TAG`` and ``END_TAG`` to settings.ini, so user can change
       default tag name from ``{{`` and ``}}`` to other strings. But this 
       appoach will effect globally, so if you are using other apps with